syntax = "proto3";

package go.micro.service.user;

service User{
    //注册
    rpc Register(UserRegisterRequest)returns(UserRegisterResponse){}
    //登录
    rpc Login(UserLoginRequest)returns(UserLoginResponse){}
    //获取用户信息
    rpc GetUserInfo(UserInfoRequest)returns(UserInfoResponse){}
}

message UserRegisterRequest {
    string user_name = 1;
    string first_name = 2;
    string password = 3;
}

message UserRegisterResponse{
    string message = 1;
}

message UserLoginRequest{
    string user_name = 1;
    string password = 2;
}
message UserLoginResponse{
    string message = 1;
}

message UserInfoRequest{
    string user_name = 1;
}

message UserInfoResponse{
    int user_id = 1;
    string user_name = 2;
    string first_name = 3;
}
